# TESK

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs..yml  .readthedocs.yml  .safety-policy.yml  .sourcery.yaml  .swagger-codegen-ignore  .travis.yml  .yamllint.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  auth.md  cloudbuild.yaml  cloudbuild_testing.yaml  compressed_data  deployment.md  dockerBuild  dockerRun  encoded_data.txt  index.yaml  init  install  mypy.ini  openshift_deployment.md  pom.xml  pyproject.toml  pytest.ini  setup.cfg  setup.py  taskmaster  tesintro.md  test_unit  test_unit.xml  tox.ini
.github/ISSUE_TEMPLATE/: general-purpose.md
.github/workflows/: build.yaml  build_and_publish_charts.yaml  build_and_publish_filer.yaml  build_and_publish_taskmaster.yaml  code_lint_format.yaml  code_quality.yaml  code_test.yaml  code_test_unit.yaml  docker-build-publish-filer.yaml  docker-build-publish-filer.yml  docker-build-publish-taskmaster.yaml  docker-build-publish-taskmaster.yml  docker-build-publish.yml  endpoint_test.yaml  helm_test.yaml  lint-format.yaml  maven-check.yml  maven-publish.yml  pr-evaulations.yaml  pr_evaulations.yaml  test.yaml  tox.yml  type-check.yaml  type_check.yaml  validation_pr.yaml  vulnerabilities.yaml  vulnerability_test.yaml
api/: tesk.py
charts/tesk/: .gitignore  Chart.yaml  README.md  tls_secret_name.yml-TEMPLATE  values.yaml
conf/: nginx.conf  tesk.conf
containers/: filer.Dockerfile  taskmaster.Dockerfile
deployment/: config.yaml
deployment/common/: config.ini  configure  run  tesk-deployment.yaml.j2  tesk-svc.yaml.j2
deployment/containers/: filer.Dockerfile  taskmaster.Dockerfile
deployment/documentation/: deployment.md  integrated_wes_tes.md  local_ftp.md
deployment/examples/: inputHttp.json
deployment/gcloud/: config.ini  tesk-api.yaml.j2  tesk-deployer.yaml.j2  tesk-rolebinding.yaml.j2
deployment/ingress/: config.ini  default-server-secret.yaml.j2  ingress-rbac.yaml.j2  ingress-rules.yaml.j2  nginx-ingress-deployment.yaml.j2  nginx-ingress-lb.yaml.j2  nginx-ingress-rc.yaml.j2  taskmaster-rbac.yaml.j2  tesk-deployment.yaml.j2  tesk-rolebinding.yaml.j2  tesk-svc.yaml.j2
deployment/localftp/: config.ini  ftp-endpoint.yaml.j2  ftp-secret.yaml.j2  ftp-service.yaml.j2
deployment/minikube/: config.ini  tesk-api.yaml.j2  tesk-deployment.yaml.j2
deployment/openshift/: config.ini  oc-route.yaml.j2  tesk-deployment.yaml.j2  tesk-svc.yaml.j2
deployment/scripts/: configure  minikubeStart  run
deployment/storage/: openstack.yaml.j2
dockerfiles/: Dockerfile-api  Dockerfile-taskmaster
dockerfiles/filer/: Dockerfile
dockerfiles/taskmaster/: Dockerfile
docs/: conf.py  index.rst  tesintro.md
docs/documentation/: deployment.md  local_ftp.md
docs/examples/: inputHelloWorld.json  inputHttp.json  taskCreate  taskList
docs/pages/: modules.rst  tesk.rst
docs/source/: conf.py  index.rst
docs/static_docs/: README.md  README_services.md  local_ftp.md  tesintro.md
docs/tesk/: tesk.api.config.rst  tesk.api.controllers.rst  tesk.api.models.rst  tesk.api.rst  tesk.api.utils.rst  tesk.rst
documentation/: azure.md  deployment.md  deployment_new.md  ingress.md  integrated_wes_tes.md  local_ftp.md  openshift_policy.md  openshift_setup.md  tesintro.md
examples/: taskCreate
examples/cancel/: counter.json
examples/error/: error_stops_execution.json  error_stops_execution_taskmaster.json  executor.json  executor_taskmaster.json  input.json  input_taskmaster.json  output_new_dir_file.json  output_new_folder.json
examples/resources/: more_cpu_than_nodes.json
examples/success/: env.json  env_taskmaster.json  hello.json  hello_taskmaster.json  input_content.json  input_dir_duplicate_file_names.json  input_dir_file_duplicate_file_names.json  input_dir_ftp01_tree.json  input_dir_ftp02_sub.json  input_dir_ftp03_tree_shadowing.json  input_dir_ftp04_tree_shadowing.json  input_dir_ftp05_merge.json  input_dir_ftp06_file_merge.json  input_file_dir_merge.json  input_file_duplicate_names.json  input_file_http.json  input_file_http_nested_mounts.json  inputoutput_taskmaster.json  output.json  output_overwrite.json  output_tree.json  output_volume.json  output_volume_taskmaster.json  stderr.json  stderr_taskmaster.json  stdin.json  stdin_taskmaster.json  stdout.json  stdout_taskmaster.json  tags.json  tags_taskmaster.json  workdir.json  workdir_taskmaster.json
examples/transferPvc/: pod.yaml  pvc.yaml
scripts/: dockerBuild  dockerRun  exportsecrets.py  filer.py  filer_class.py  genjob.py  job.py  killtask.sh  pvc.py  run  specfromtask.py  state.py  taskmaster  taskmaster.py  testkub.py
source/tesk-core/: cloudbuild_testing.yaml  dockerBuild  pytest.ini  setup.py
specs/: API_message.json  filer.json  filertest.json  pi_ex.json  pifail.json  pv.json  pvc.json  setauth.json  strg_class.json  task_example.json  taskmaster.json
specs/core/: tesk-deployment.yaml
specs/examples/: decompress_fasta.tes.json
specs/ingress/: ingress-rules.yaml  nginx-ingress-lb.yaml  nginx-ingress-rc.yaml  tesk-deployment.yaml  tesk-svc.yaml  test-deployment.yaml  test-svc.yaml
specs/openshift/: oc-route.yaml  policy.md  tesk-deployment.yaml  tesk-scv.yaml
specs/testing/: mouse_API_message.json  mouse_ftp_test.json  mouse_test.tes.json  pv_cinder.json  setauth.json  taskmaster.json
src/tesk_core/: exception.py  extract_endpoint.py  filer.py  filer_class.py  filer_s3.py  (+4 more)
tesk/: __init__.py  app.py  config.yaml  constants.py  custom_config.py  exceptions.py  tesk_app.py  utils.py
tesk-core/: .gitignore  README.md  setup.cfg  setup.py  tox.ini
tesk_core/: README.md  exception.py  filer.py  filer_class.py  job.py  path.py  pvc.py  taskmaster.py  transput_filer.py
testing/: submitkub.py  taskmastertest.py  tesk-controller.yaml  tesk-service.yaml  testkub.py
tests/: FilerClassTest.py  FilerTest.py  TaskMasterTest.py  test_extract_endpoint.py  test_filer.py  test_filer_general_pytest.py  test_job.py  test_s3_filer.py  test_taskmaster.py
util/: exportsecrets.py
(+458 files in other folders)
